fix(exception-handling): [#841] add methods for multiple edc urls